<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CoffeeVibe</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="log_out">Log out</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="desserts">Desserts</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="items">Items</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="first_name">First name</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing, you agree to our Terms of Service and Privacy Policy</string>
    <string name="sign_up">Sign up</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="channel_name">Test</string>
    <string name="channel_description">Da</string>
    <string name="settings">Settings</string>
    <string name="get_help">Get Help</string>
    <string name="about_us">About Us</string>
    <string name="call_us_n_8_800_555_35_35" tools:ignore="TypographyDashes">Call us \n 8–928-471-21-33</string>
    <string name="email_us_n_savevibe_gmail_com">Email us \n savevibe@gmail.com</string>
    <string name="notifications">Notifications</string>
    <string name="account_management">Account management</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="already_registered_sign_in">Already registered? Sign in</string>
    <string name="admin">Admin</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="users">Users</string>
    <string name="users_management">Users management</string>
    <string name="add_new_item">Add New Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_item_category">Enter item category</string>
    <string name="enter_item_price">Enter item price</string>
    <string name="order_create">Order is placed, please wait! \nTotal price: </string>
    <string name="dark_theme">Dark Theme</string>
    <string name="change_your_name">Change your name</string>
    <string name="change_your_password">Change your password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_new_admin">Add New Admin</string>
    <string name="enter_admin_name">Enter admin name</string>
    <string name="enter_admin_email">Enter admin email</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="you_are_registered">You are registered!</string>
    <string name="email_already_exists">Email already exists!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="email_is_too_short_minimum_length_is_8">Password is too short!, minimum length is 8</string>
</resources>