<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Fragments.AccountFragment">

    <TextView
        style="@style/Account"
        android:text="@string/account" />

    <TextView
        android:id="@+id/textViewName"
        style="@style/AccountName" />

    <com.google.android.material.button.MaterialButton
        style="@style/AccountItems"
        android:id="@+id/accManageButton"
        android:text="@string/account_management"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getHelpButton"
        style="@style/AccountItems"
        android:text="@string/get_help"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aboutButton"
        android:text="@string/about_us"
        style="@style/AccountItems"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/themeButton"
            style="@style/AccountItems"
            android:layout_width="300dp"
            android:layout_margin="0dp"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        style="@style/ButtonAccount"
        android:text="@string/log_out"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/ButtonAccount"
        android:text="@string/log_in" />

</LinearLayout>