<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activities.AccountManageActivity">

    <TextView
        style="@style/Account"
        android:layout_marginBottom="20dp"
        android:text="@string/account"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/editTextNameAcc"
        style="@style/EditTextWithLabelStyle"
        android:hint="@string/change_your_name"/>



    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextWithLabelStyle"
        android:hint="@string/change_your_password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/baseline_password_24"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            style="@style/ButtonAccount"
            android:text="@string/cancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#E2E2E2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            style="@style/ButtonAccount"
            android:text="@string/save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"/>

    </LinearLayout>

</LinearLayout>