<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_chevron_left_24"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/raleway_extrabold"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/notifButton"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/raleway_semibold"
            />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:paddingEnd="15dp"
            />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/AccountItems"
        android:id="@+id/accManageButton"
        android:text="@string/account_management"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/themeButton"
        android:text="@string/theme"
        style="@style/AccountItems"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/languageButton"
        android:text="@string/language"
        style="@style/AccountItems"
        />

</LinearLayout>