<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AboutUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_chevron_left_24"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/raleway_extrabold"
            android:text="@string/about_us"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:paddingEnd="30dp"/>

    </LinearLayout>

    <TextView
        style="@style/TextViewSettingsItem"
        android:text="@string/call_us_n_8_800_555_35_35"
        android:drawableRight="@drawable/baseline_call_24"
        />

    <TextView
        style="@style/TextViewSettingsItem"
        android:text="@string/email_us_n_savevibe_gmail_com"
        android:drawableRight="@drawable/baseline_email_24"
        />

    <TextView
        style="@style/TextViewSettingsItem"
        android:text="Приложение разрабатывал студент МГГТК АГУ \n группы ИС-32 Трушин Максим"
        android:drawableRight="@drawable/baseline_account_circle_24"
        />

</LinearLayout>