<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.AdminFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/raleway_extrabold"
                android:gravity="center"
                android:text="@string/admin_panel"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="110dp"
                android:fontFamily="@font/raleway_extrabold"
                android:gravity="left"
                android:text="@string/users_management"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUsers"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textViewMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="110dp"
                android:fontFamily="@font/raleway_extrabold"
                android:gravity="left"
                android:text="Menu"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addMenuBtn"
                style="@style/ButtonAccount"
                android:text="@string/add_new_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remMenuBtn"
                style="@style/ButtonAccount"
                android:text="@string/remove_item" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>