<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activities.RemoveItemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/raleway_extrabold"
        android:gravity="center"
        android:text="@string/remove_item"
        android:textColor="@color/black"
        android:textSize="20sp"
        />


    <SearchView
        android:id="@+id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_style"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:queryHint="Search item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="500dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            style="@style/ButtonAccount"
            android:text="@string/cancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#E2E2E2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            style="@style/ButtonAccount"
            android:text="@string/save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"/>

    </LinearLayout>
</LinearLayout>