<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddItemActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/raleway_extrabold"
        android:gravity="center"
        android:text="@string/add_new_item"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_style"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/baseline_label_24"
        android:inputType="text"
        android:padding="10dp"
        android:hint="@string/enter_item_name"
        android:gravity="center_vertical"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_style"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/baseline_label_24"
        android:padding="10dp"
        android:hint="@string/enter_item_category"
        android:gravity="center_vertical"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_style"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/baseline_money_24"
        android:padding="10dp"
        android:hint="@string/enter_item_price"
        android:gravity="center_vertical"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            style="@style/ButtonAccount"
            android:text="Cancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#E2E2E2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            style="@style/ButtonAccount"
            android:text="Save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"/>

    </LinearLayout>

</LinearLayout>